Created fragment, adapter, viewModel, repository, retrofit to get room and player data from Yasha's domain

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">balloon-game-client</string>
+    <string name="room_icon_content_description">Room icon</string>
 </resources>
