Play button appears after joining the group only. Fixed data classes for work with new API.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="room_create_play_room">Create play room</string>
     <string name="dialog_create_playroom_hint_name">ENTER PLAYROOM NAME</string>
     <string name="dialog_create_playroom_create">Create game</string>
+    <string name="play_game_btn">Play</string>
 </resources>
