--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">balloon-game-client</string>
+    <string name="app_name">Snotty</string>
     <string name="room_icon_content_description">Room icon</string>
     <string name="dialog_login_hint_enter_name">ENTER NAME</string>
     <string name="dialog_login_join_game">Join game</string>
